# OMR-model-inference

./: README.md  README.roboflow.txt  data.yaml  pyproject.toml  train.py  training.ipynb
test/labels/: submission_3-page_1_jpg.rf.b649d2a34291ee5cbe7aad83598353ec.txt  submission_4-page_2_jpg.rf.c861401f14d34098d64e73122a88d3e7.txt  submission_6-page_1_jpg.rf.f0c614ed36ae1b75f7330815b8363a9f.txt  submission_7-page_1_jpg.rf.8e715820fbff92eac160896ac6b61c7d.txt
train/labels/: bubble-100-UBC_Page_1_jpg.rf.35e9f12980c2225b969ef93c5f0449af.txt  bubble-100-UBC_Page_1_jpg.rf.7d882f7c921c91242c67b4efb31ddd38.txt  bubble-100-UBC_Page_1_jpg.rf.84a051ea611703b4a4c26c8fd18dc8df.txt  bubble-200-ubc_Page_1_jpg.rf.a4ca272de6061297ee595724ddcd3a6f.txt  bubble-200-ubc_Page_1_jpg.rf.a8dfac1e480a6efda1137aea771e603f.txt  bubble-200-ubc_Page_1_jpg.rf.fc6c250e4f8068c0506b76ddc249fdb3.txt  bubble-200-ubc_Page_2_jpg.rf.18ec49d6b639dd179ba10f0725d7a1b1.txt  bubble-200-ubc_Page_2_jpg.rf.346d68fc9696f971f1a7fe3f7bb921dc.txt  bubble-200-ubc_Page_2_jpg.rf.8460557960050973ecc321f4b5773d01.txt  submission_1-page_1_jpg.rf.2b6e9a763c6c736aaa10ad6fdfc0b617.txt  submission_1-page_1_jpg.rf.51f65d0756ca11e17be4e6cb51b2a70c.txt  submission_1-page_1_jpg.rf.72683e3de4364737b9e5eb1ca4bbdd6f.txt  submission_1-page_2_jpg.rf.8f4dbf5fe97cf2b3c5f674b60643e3f0.txt  submission_1-page_2_jpg.rf.e4256feb8e7d25b5c09508d48ddd2d17.txt  submission_11-page_1_jpg.rf.0f8f26f49d5ee3c7e0eba94dd91959e4.txt  submission_11-page_1_jpg.rf.e912df36305e0ff76477b0b8143c3a61.txt  (+31 more)
(+4 files in other folders)
